--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/style.css" />
-    <title>SVideo</title>
+    <link rel="stylesheet" href="/public/style.css" />
+    <title>svideo</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="public/bundle.js"></script>
+    <script src="/public/bundle.js"></script>
   </body>
 </html>
